syntax = "proto3";

package struct;

message Peer {
  int32 type = 1;
  int64 id = 2;
}

message ExPeer {
  int32 type = 1;
  int64 id = 2;
  int64 access_hash = 3;
}

message TextMessage {
  string text = 1;
  repeated int64 mentions = 2;
}

message Message {
  TextMessage text_message = 15;
}

message DeleteDates {
  repeated int64 dates = 1;
}

message MessageId {
  int64 date = 1;
  int64 rid = 2;
  int64 seq = 3;
}

message GroupOutPeer {
  int64 group_id = 1;
  int64 access_hash = 2;
}

message UserOutPeer {
  int32 uid = 1;
  int64 access_hash = 2;
}

message MessageContainer {
  int32 sender_uid = 1;
  int64 rid = 2;
  int64 date = 3;
  Message message = 4;
}

message Group {
  int32 id = 1;
  string title = 3;
  int32 members_count = 20;
  repeated string available_reactions = 33;
}

message FullGroup {
  int32 id = 1;
  string title = 3;
  int32 members_count = 10;
  repeated string available_reactions = 24;
}

message MessagesViews {
  MessageId mid = 1;
  repeated int64 views = 2;
}

message Avatar {
  AvatarImage small_image = 1;
  AvatarImage large_image = 2;
  AvatarImage full_image = 3;
  int64 id = 4;
  int64 date = 5;
}

message AvatarImage {
  FileLocation file_location = 1;
  int32 width = 2;
  int32 height = 3;
  int32 file_size = 4;
}

message FileLocation {
  int64 file_id = 1;
  int64 access_hash = 2;
  int32 file_storage_version = 3;
}

message DateValue {
  int64 date = 1;
}

message HistoryMessageIdentifier {
  Peer peer = 1;
  int64 random_id = 2;
  DateValue date = 3;
}